--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   },
   "dependencies": {
     "nuxt": "^3.16.1",
+    "nuxt-particles": "^0.3.0",
+    "three": "^0.175.0",
+    "vanta": "^0.5.24",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-particles": "^2.12.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^12.0.0",
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "eslint": "^8.57.1",
