--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier:write": "prettier --write ."
   },
   "dependencies": {
+    "@iconify/vue": "^4.3.0",
     "nuxt": "^3.16.1",
     "nuxt-particles": "^0.3.0",
     "three": "^0.175.0",
