--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.3.0",
+    "@tsparticles/shape-image": "^3.8.1",
     "nuxt": "^3.16.1",
     "nuxt-particles": "^0.3.0",
-    "three": "^0.175.0",
-    "vanta": "^0.5.24",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vue3-particles": "^2.12.0"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^12.0.0",
